--- a/JsonMultiConverter/JsonMultiConverter.csproj
+++ b/JsonMultiConverter/JsonMultiConverter.csproj
@@ -54,10 +54,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Factory\JsonCreator.cs" />
-    <Compile Include="Factory\JsonTypeFirstCreator.cs" />
-    <Compile Include="Factory\JsonTypeSecondCreator.cs" />
-    <Compile Include="Factory\JsonTypeThirdCreator.cs" />
     <Compile Include="Handlers\BaseTypeHandler.cs" />
     <Compile Include="Handlers\FirstTypeHandler.cs" />
     <Compile Include="Handlers\SecondTypeHandler.cs" />
@@ -65,7 +61,6 @@
     <Compile Include="Interfaces\IHandler.cs" />
     <Compile Include="Interfaces\IJsonType.cs" />
     <Compile Include="Handlers\AbstractHandler.cs" />
-    <Compile Include="Interfaces\IStrategy.cs" />
     <Compile Include="Mapping\JsonMapping.cs" />
     <Compile Include="Models\BasePolicy.cs" />
     <Compile Include="Models\JsonModels\JsonTypeFirst.cs" />
@@ -79,9 +74,7 @@
     <Compile Include="Models\Vehicle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Strategy\BaseTypeStrategy.cs" />
-    <Compile Include="Strategy\ContextStrategy.cs" />
-    <Compile Include="Strategy\FirstTypeStrategy.cs" />
+    <Compile Include="Contexts\Context.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
